# Camilla

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: main.rs
src/libcamilla/: lib.rs
src/libcamilla/filters/: bloom.rs  bucket_hashes.rs  mod.rs  rabin.rs  rolling_hash.rs
src/libcamilla/filters/blocks/: blanket.rs  mod.rs
src/libcamilla/parsing/: fastq.rs  mod.rs
src/libcamilla/structures/: collection.rs  collections.rs  mod.rs  sequence.old  sequence.rs
src/libcamilla/structures/bad_seq/: nucleotide.rs  packed.rs  read.rs
src/libcamilla/structures/sequence/: complement.rs  mod.rs  nucleotide.rs  packed.rs  read.rs  storage.rs  windows.rs
