[package]
name = "Camilla"
version = "0.1.0"
edition = "2021"
authors = ["me"]

[lib]
name = "libcamilla"
path = "src/libcamilla/lib.rs"

[[bin]]
name = "camilla"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debruijn = "0.3.4"
