[package]
name = "Camilla"
version = "0.1.0"
edition = "2021"
authors = ["me"]

[lib]
name = "libcamilla"
path = "src/libcamilla/lib.rs"

[[bin]]
name = "Camilla"
path = "src/main.rs"

[dependencies]
bitvec = "1.0.1"
rand = { version = "0.8.5", features = ["std_rng"] }
static_assertions = "1.1.0"
wyz = "0.5"

[profile.release]
debug = true
